<resources>
    <string name="app_name">FooDiary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_info">음식 정보</string>
    <string name="food_count">개/인분</string>
    <string name="nutrient">영양성분</string>
    <string name="calorie">칼로리</string>
    <string name="carbo">탄수화물</string>
    <string name="protein">단백질</string>
    <string name="fat">지방</string>
    <string name="review">한 줄 리뷰</string>
    <string name="time">시간</string>
    <string name="place">장소</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="food_name">음식 이름</string>
    <string name="food_amount">음식 수량 (개/인분)</string>
    <string name="text_review">간단한 리뷰를 남겨주세요.</string>
    <string name="add_button">추가</string>
    <string name="apply">적용</string>
    <string name="Home">Home</string>
    <string name="Analysis">Analysis</string>
    <string name="Calendar">Calendar</string>
    <string name="searchBtn">Search Button</string>
    <string name="addPhoto">사진 입력</string>
    <string name="calinfo">칼로리 정보</string>
    <string name="fatinfo">지방 정보</string>
    <string name="proinfo">단백질 정보</string>
    <string name="carboinfo">탄수화물 정보</string>
    <string name="seeMore">더보기</string>
    <string name="camera_btn">카메라</string>
    <string name="todayDate">today</string>
    <string name="summary_of_the_day">Summary of the Day</string>
    <string name="calories">Calories</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="no_data">No Data</string>
    <string name="foodList">음식 리스트</string>
    <string name="show_details">Show Details</string>
    <string name="pic">사진</string>

</resources>