<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".food_data_input">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:orientation="vertical">



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"

                android:layout_height="194dp"
                app:layout_constraintEnd_toStartOf="@+id/button14"
                app:layout_constraintStart_toStartOf="@+id/button14">

                <TextView
                    android:id="@+id/foodInfo"
                    android:layout_width="134dp"
                    android:layout_height="17dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/food_info"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/foodAmount"
                    android:layout_width="255dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:hint="@string/food_amount"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:textColorHint="#757575"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:targetApi="o" />

                <ImageButton
                    android:id="@+id/searchBtn"
                    android:layout_width="55dp"
                    android:layout_height="49dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/searchBtn"
                    app:layout_constraintBottom_toTopOf="@+id/foodAmount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/foodName"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.784"
                    app:srcCompat="@drawable/search" />

                <EditText
                    android:id="@+id/foodName"
                    android:layout_width="205dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:hint="@string/food_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColorHint="#00838F"
                    app:layout_constraintBottom_toTopOf="@+id/foodAmount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/foodInfo"
                    app:layout_constraintVertical_bias="0.952"
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/apply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/apply"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/foodAmount" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="156dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/protein"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/calval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    app:layout_constraintBottom_toTopOf="@+id/proval"
                    app:layout_constraintEnd_toStartOf="@+id/textView6"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.536"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/calorie"
                    app:layout_constraintBottom_toTopOf="@+id/textView7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/proval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="36dp"
                    android:importantForAutofill="no"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="120dp"
                    android:layout_marginBottom="14dp"
                    android:text="@string/fat"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/carval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:importantForAutofill="no"
                    app:layout_constraintBottom_toTopOf="@+id/fatval"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="42dp"
                    android:layout_marginEnd="120dp"
                    android:layout_marginBottom="18dp"
                    android:text="@string/carbo"
                    app:layout_constraintBottom_toTopOf="@+id/textView8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fatval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:importantForAutofill="no"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/carval"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
                    tools:targetApi="o" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/nutrient"
                    app:layout_constraintBottom_toTopOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="121dp">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/review"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/foodReview"
                    android:layout_width="356dp"
                    android:layout_height="57dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:hint="@string/text_review"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColorHint="#546E7A"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:targetApi="o" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp">

                <ImageButton
                    android:id="@+id/searchBtn2"
                    android:layout_width="55dp"
                    android:layout_height="49dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/searchBtn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.157"
                    app:layout_constraintStart_toEndOf="@+id/inputPlace"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.953"
                    app:srcCompat="@drawable/search" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:background="#00FFFFFF"
                    android:text="@string/place"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/inputTime" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/inputTime"
                    android:layout_width="192dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView17"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/inputPlace"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="8dp"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView16"
                    android:contentDescription="search place"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/addPhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/addPhoto" />

                    <ImageButton
                        android:id="@+id/cameraBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="#00FFFFFF"
                        android:text="@string/add_button"
                        app:srcCompat="@drawable/camera" />

                </LinearLayout>
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="center"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="209dp"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textColor="#795548" />

                <Button
                    android:id="@+id/saveBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>