<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".food_data_input">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="191dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="234dp"
                android:layout_height="166dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/photo_camera" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:layout_constraintEnd_toStartOf="@+id/button14"
            app:layout_constraintStart_toStartOf="@+id/button14">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="134dp"
                android:layout_height="17dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/food_info"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/foodAmount"
                android:layout_width="246dp"
                android:layout_height="27dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/food_amount"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="38dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/food_count"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/foodAmount" />

            <Button
                android:id="@+id/button14"
                android:layout_width="39dp"
                android:layout_height="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="180dp"
                android:background="@android:drawable/ic_menu_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/foodName"
                android:layout_width="181dp"
                android:layout_height="31dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/food_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/foodAmount"
                app:layout_constraintEnd_toStartOf="@+id/button14"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:targetApi="o" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="118dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="80dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="14dp"
                android:text="@string/protein"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName7"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextTextPersonName6"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="42dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName7"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="54dp"
                android:text="@string/calorie"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/editTextTextPersonName7"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_marginStart="17dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="14dp"
                android:text="@string/fat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName8"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <EditText
                android:id="@+id/editTextTextPersonName9"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="18dp"
                android:text="@string/carbo"
                app:layout_constraintBottom_toTopOf="@+id/textView8"
                app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName9"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTextPersonName8"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="15dp"
                android:text="@string/nutrient"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="121dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/review"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/foodReview"
                android:layout_width="354dp"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/text_review"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColorHint="#546E7A"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:targetApi="o" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="430dp"
            android:layout_height="150dp">

            <ImageButton
                android:id="@+id/search3"
                android:layout_width="32dp"
                android:layout_height="33dp"
                android:layout_marginStart="28dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/inputPlace"
                app:srcCompat="@android:drawable/ic_menu_search" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/place"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="66dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputTime"
                android:layout_width="192dp"
                android:layout_height="21dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="time"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/inputPlace"
                android:layout_width="294dp"
                android:layout_height="29dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="429dp"
        android:layout_height="38dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button12"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textColor="#00796B" />

        <Button
            android:id="@+id/button13"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="#00796B" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>